# mr_supabase

./: README.md  plugin_info.json  pyproject.toml  setup.py
src/mr_supabase/: __init__.py  client.py  mod.py  postgres_client.py  utils.py
