[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mr_supabase"
version = "0.1.0"
description = "MindRoot Supabase Database Integration"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
dependencies = [
    "supabase>=1.0.0",
    "python-dotenv>=0.19.0",
     "psycopg2-binary>=2.9.5",
 ]

 [project.optional-dependencies]
 dev = [
     "pytest>=6.0",
     "black>=22.3.0",
 ]
